--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.1.3",
