--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^5.1.0",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
+    "joi": "^17.12.2",
     "mongoose": "^8.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "sanitize-html": "^2.12.1"
   }
 }
