--- a/package.json
+++ b/package.json
@@ -3,18 +3,34 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "NODE_ENV=development nodemon",
     "start": "NODE_ENV=production node backend-ts/dist/server.js",
     "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "npm install --prefix frontend-next && npm run build --prefix frontend-next",
-    "build:backend": "tsc"
+    "build:backend": "tsc -p backend-ts/tsconfig.json"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.6.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^22.5.4",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "typescript": "^5.5.4"
   }
 }
