--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,15 +12,13 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "paths": {
-      "@shared/*": ["../shared/src/*"]  // Path mapping to the shared types
-    }
+    
   },
-  "files": [],
   "include": [
     "src/**/*"
   ],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["dist"],
+  "files": [],
   "references": [
     { "path": "../shared" }
   ]
