--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development nodemon",
-    "start": "NODE_ENV=production node backend-ts/dist/server.js",
+    "start": "NODE_ENV=production node backend/dist/server.js",
     "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "npm install --prefix frontend-next && npm run build --prefix frontend-next",
-    "build:backend": "tsc -p backend-ts/tsconfig.json"
+    "build:backend": "cd backend && tsc --build",
+    "build:shared": "cd shared && tsc --build"
   },
   "dependencies": {
     "connect-mongo": "^5.1.0",
@@ -21,7 +22,9 @@
     "mongoose": "^8.6.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "sanitize-html": "^2.13.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
@@ -31,6 +34,7 @@
     "@types/node": "^22.5.4",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/sanitize-html": "^2.13.0",
     "typescript": "^5.5.4"
   }
 }
