--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "axios": "^1.7.7",
-    "next": "14.2.8",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "zod": "^3.23.8"
@@ -23,7 +22,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.8",
+    "eslint-config-next": "^14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
