--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon",
     "start": "NODE_ENV=production node dist/server.js",
-    "build": "tsc --build",
+    "build": "npm install && npm run build:shared && tsc --build",
     "build:frontend": "npm run build --prefix ../frontend",
-    "build:shared": "cd ../shared && tsc --build"
+    "build:shared": "npm install && cd ../shared && tsc --build"
   },
   "dependencies": {
     "connect-mongo": "^5.1.0",
